converter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doc-2-pdf-converter-service
  namespace: d2p
spec:
  type: NodePort
  selector:
    app: doc-2-pdf-converter
  ports:
    - protocol: TCP
      port: 80
      targetPort: converter-port
